# ctlgr-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  committed.toml  dprint.json  install.sh
.claude/: settings.json
.claude/commands/: add-doc.md
.github/: CODEOWNERS
.github/workflows/: auto-tag.yml  ci.yml  release.yml
.specify/: feature.json
.specify/memory/: constitution.md
benches/: startup.rs
ctlgr-docs/: config.html  index.html  lint.html
specs/: settings-refactor.md
specs/001-convert-command/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-convert-command/checklists/: requirements.md
specs/001-convert-command/contracts/: convert-command.md
src/: convert.rs  lib.rs  lint.rs  main.rs  search.rs  settings.rs  update.rs
tests/: convert.rs  integration.rs  lint.rs  search.rs  settings.rs  update.rs
