[package]
name = "ctlgr"
version = "0.0.2"
edition = "2024"

# Dev tools (install with: cargo install <name>)
# - committed = "1"   (conventional commits, enforced via commit-msg hook)
# - dprint = "0.54"   (markdown formatting, enforced via pre-commit hook)
[package.metadata.tools]
committed = "1"
dprint = "0.54"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[dependencies]
clap = { version = "4", features = ["derive"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
glob = "0.3"
ego-tree = "0.11"
htmd = "0.5"
semver = "1"
ureq = { version = "3", features = ["json"] }
pulldown-cmark = "0.13.4"
regex = "1.12.3"
